. automated_backup_rds.tf
resource "aws_db_instance" "app_db" {
  # ...
  backup_retention_period = 7
  backup_window           = "02:00-03:00"
  # ...
}
